Fix images path and z-index (no-js)

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -979,7 +979,7 @@ body {
       left: -50px;
       width: 280px;
       height: 350px;
-      background-image: url("../../img/icon-timer.svg");
+      background-image: url("../img/icon-timer.svg");
       -webkit-background-size: 276px 316px;
               background-size: 276px 316px;
       background-repeat: no-repeat; }
@@ -1099,6 +1099,7 @@ body {
 
 .reviews__control {
   position: relative;
+  z-index: 5;
   display: inline-block;
   vertical-align: top;
   width: 6px;
@@ -1227,7 +1228,7 @@ label[for=reviews-slide-3] {
 
 @media (min-width: 1200px) {
   .reviews {
-    background-image: url("../../img/icon-quotes.svg");
+    background-image: url("../img/icon-quotes.svg");
     background-repeat: no-repeat;
     background-position: center 72px; }
   .reviews__wrapper {
@@ -1406,9 +1407,15 @@ label[for=reviews-slide-3] {
   vertical-align: top;
   width: 32px;
   height: 32px;
-  background-color: rgba(255, 0, 0, 0.3); }
+  background-color: rgba(255, 0, 0, 0.3);
+  background-image: url("../img/icon-no.svg");
+  background-repeat: no-repeat;
+  -webkit-background-size: 100% 100%;
+          background-size: 100%; }
   .rates__option-has.rates__options-has--yes {
-    background-color: rgba(0, 128, 0, 0.4); }
+    background-color: rgba(0, 128, 0, 0.4);
+    background-image: url("../img/icon-yes.svg");
+    background-repeat: no-repeat; }
 
 .rates__controls {
   position: absolute;
@@ -1775,3 +1782,7 @@ label[for=rates-slide-3] {
   .map {
     height: 502px;
     background-image: url("../img/bg-map-desktop@1x.jpg"); } }
+
+.page-footer {
+  width: 100%;
+  background-color: #fff; }
