--- a/app/sass/blocks/effect.scss
+++ b/app/sass/blocks/effect.scss
@@ -52,7 +52,7 @@
 			width: 280px;
 			height: 350px;
 
-			background-image: url("../../img/icon-timer.svg");
+			background-image: url("../img/icon-timer.svg");
 			background-size: 276px 316px;
 			background-repeat: no-repeat;
 		}
