--- a/app/sass/blocks/rates.scss
+++ b/app/sass/blocks/rates.scss
@@ -145,9 +145,14 @@
 	height: 32px;
 
 	background-color: rgba(red, 0.3);
+	background-image: url("../img/icon-no.svg");
+	background-repeat: no-repeat;
+	background-size: 100%;
 
 	&.rates__options-has--yes{
 		background-color: rgba(green, 0.4);
+		background-image: url("../img/icon-yes.svg");
+		background-repeat: no-repeat;
 	}
 }
 
