--- a/app/sass/blocks/reviews.scss
+++ b/app/sass/blocks/reviews.scss
@@ -68,6 +68,7 @@
 
 .reviews__control{
 	position: relative;
+	z-index: 5;
 
 	display: inline-block;
 	vertical-align: top;
@@ -211,7 +212,7 @@
 
 @media (min-width: $desktop-width){
 	.reviews{
-		background-image: url("../../img/icon-quotes.svg");
+		background-image: url("../img/icon-quotes.svg");
 		background-repeat: no-repeat;
 		background-position: center 72px;
 	}
@@ -297,6 +298,5 @@
 
 	.reviews__summary{
 		width: 700px;
-
 	}
 }
